
CMAKE_MINIMUM_REQUIRED(VERSION 2.6 FATAL_ERROR)

SET(PACKAGE ${PROJECT_NAME})
SET(VERSION "0.0.1")

SET(PACKAGE_NAME ${PACKAGE})
SET(PACKAGE_VERSION ${VERSION})
SET(PACKAGE_STRING "${PACKAGE_NAME} ${PACKAGE_VERSION}")

INCLUDE_DIRECTORIES("../")

MESSAGE(STATUS "Added Project: " ${PACKAGE_STRING})

FILE(GLOB H0WXD_SRC
    "*.hpp"
    "*.ipp"
    "Threading/*.hpp"
    "Threading/*.ipp"
    "Collections/*.hpp"
    "Collections/*.ipp"
    "Logging/*.hpp"
    "Logging/*.ipp"
    "Logging/Behaviors/*.hpp"
    "Logging/Behaviors/*.ipp"
)

MESSAGE(STATUS "Source Files: ")
FOREACH(SRC_FILE ${H0WXD_SRC})
    MESSAGE(STATUS ${SRC_FILE})
ENDFOREACH(SRC_FILE ${H0WXD_SRC})

ADD_LIBRARY(${PROJECT_NAME} SHARED ${H0WXD_SRC})
ADD_LIBRARY("${PROJECT_NAME}_s" STATIC ${H0WXD_SRC})

SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES LINKER_LANGUAGE CXX)
SET_TARGET_PROPERTIES("${PROJECT_NAME}_s" PROPERTIES LINKER_LANGUAGE CXX)

SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES DEBUG_POSTFIX "_d")
SET_TARGET_PROPERTIES("${PROJECT_NAME}_s" PROPERTIES DEBUG_POSTFIX "d")
