
CMAKE_MINIMUM_REQUIRED(VERSION 2.6 FATAL_ERROR)

SET(PACKAGE ${PROJECT_NAME})
SET(VERSION "1.0.0")

SET(PACKAGE_NAME ${PACKAGE})
SET(PACKAGE_VERSION ${VERSION})
SET(PACKAGE_STRING "${PACKAGE_NAME} ${PACKAGE_VERSION}")

MESSAGE(STATUS "Added Project: " ${PACKAGE_STRING})

INCLUDE_DIRECTORIES("../../Source/")
#LINK_DIRECTORIES(${LIBRARY_DIRECTORY})

FILE(GLOB H0WXD_TEST_SRC
    "*.hpp"
    "*.cpp"
)

MESSAGE(STATUS "Source Files: ")
FOREACH(SRC_FILE ${H0WXD_TEST_SRC})
    MESSAGE(STATUS ${SRC_FILE})
ENDFOREACH(SRC_FILE ${H0WXD_TEST_SRC})

ADD_EXECUTABLE(${PROJECT_NAME} ${H0WXD_TEST_SRC})
#TARGET_LINK_LIBRARIES(${PROJECT_NAME} debug h0wXD_sd optimized h0wXD_s)

SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES DEBUG_POSTFIX "_d")

SET_PROPERTY(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD 11)
SET_PROPERTY(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD_REQUIRED ON)
